<resources>
    <string name="app_name">CookingBootCamp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_upload_profile_photo_page">UploadProfilePhotoPage</string>
    <string name="title_activity_confirm_photo_page">ConfirmPhotoPage</string>
    <string name="title_activity_main_menu_page">MainMenuPage</string>
    <string name="title_activity_top10_recipes_page">Top10RecipesPage</string>
    <string name="title_activity_top10_cook_star_page">Top10CookStarPage</string>
    <string name="title_activity_recipe_detail_page">RecipeDetailPage</string>
    <string name="title_activity_cook_personal_information_page">CookPersonalInformationPage
    </string>
    <string name="title_activity_upload_recipe_page">UploadRecipePage</string>
    <string name="title_activity_community_page">CommunityPage</string>
    <string name="title_activity_search_local_recipe_page">SearchLocalRecipePage</string>
    <string name="title_activity_search_local_cooks_page">SearchLocalCooksPage</string>
    <string name="title_activity_user_information_page">UserInformationPage</string>
    <string name="title_activity_edit_user_page">EditUserPage</string>
    <string name="title_activity_user_uploaded_recipe_page">UserUploadedRecipePage</string>
    <string name="title_activity_user_friend_page">UserFriendPage</string>
    <string name="title_activity_user_collections_page">UserCollectionsPage</string>
    <string name="title_activity_local_recipe_page">LocalRecipePage</string>>

    <string name="community">Community</string>
    <string name="localcooks">Local cooks</string>
    <string name="localrecipes">Local recipes</string>
    <string name="profilephoto">Profile Photo</string>
    <string name="confirm">Confirm</string>
    <string name="retake">Retake</string>
    <string name="myfriend">My Friend</string>
    <string name="cookinfo">Cook Information</string>
    <string name="cookinfoname">Name: </string>
    <string name="cookinfonamehint">John</string>
    <string name="cookinfoemail">Email: </string>
    <string name="cookinfoemailhint">xxx@gmail.com</string>
    <string name="cookinfodesc">Description: </string>
    <string name="cookinfodeschint">This is the basic description of cook</string>
    <string name="cookinfoadd">Add</string>
    <string name="editinfo">Edit</string>
    <string name="editinfooldpwd">Old Password</string>
    <string name="editinfonewpwd">New Password</string>
    <string name="editinfoconfirmpwd">Confirm Password</string>
    <string name="editinfoemail">Email</string>
    <string name="editinfoimage">Change</string>
    <string name="recipename">Recipe Name</string>
    <string name="cookbootcamp">Cooking Boot Camp</string>
    <string name="username">User Name</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="weeklttop10recipe">Weekly Top 10 Recipes</string>
    <string name="weeklttop10cook">Weekly Top 10 Cooks</string>
    <string name="recipe">Recipe</string>
    <string name="recipeinfo">Recipe Information</string>
    <string name="author">Author</string>
    <string name="add2collections">Add to collections</string>
    <string name="recipeinfodesc">One sentence to describe recipe</string>
    <string name="recipeinfosteps">This is the box for recipe steps</string>
    <string name="email">Email</string>
    <string name="confirmpwd">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="profilephotoupload">Profile photo upload</string>
    <string name="profilephotouploadtext">You have to choose a picture to be your icon!</string>
    <string name="takephoto">Take photo</string>
    <string name="fromimagefolder">From image folder</string>
    <string name="uploadrecipe">Upload recipe</string>
    <string name="uploadrecipename">Recipe Name</string>
    <string name="uploadrecipeimage">Choose photo</string>
    <string name="upload">Upload</string>
    <string name="mycollections">My collections</string>
    <string name="myrecipes">My recipes</string>
    <string name="title_activity_delete">Delete</string>


</resources>
