<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qiuyi.cookingbootcamp.CookPersonalInformationPage"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

   <ImageView
       android:id="@+id/cookid"
       android:src="@drawable/cook_information"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_gravity="center"
       android:layout_weight="0.39"
       />


    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/cookImage"
        android:src="@drawable/touxiang"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_gravity="center"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cookname"
        android:text="@string/cookinfoname"
        android:layout_below="@+id/cookImage"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textColor="@color/orange"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editName"
        android:layout_alignBottom="@+id/cookname"
        android:layout_toRightOf="@+id/cookname"
        android:hint="@string/cookinfonamehint"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cookemail"
        android:text="@string/cookinfoemail"
        android:layout_below="@+id/cookname"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textColor="@color/orange"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editcookemail"
        android:layout_toRightOf="@+id/cookemail"
        android:hint="@string/cookinfoemailhint"
        android:layout_alignBottom="@+id/cookemail"
        android:textSize="15dp"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cookdescription"
        android:text="@string/cookinfodesc"
        android:layout_below="@+id/cookemail"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textColor="@color/orange"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editcookdescription"
        android:layout_toRightOf="@+id/cookdescription"
        android:singleLine="false"
        android:hint="@string/cookinfodeschint"
        android:layout_alignBottom="@+id/cookdescription"
        android:textSize="15dp"
        android:typeface="normal"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addfriend"
        android:layout_below="@+id/editcookdescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/cookinfoadd"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        />


    </LinearLayout>


</RelativeLayout>
