<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/cookingbootcamp"
            android:layout_weight="0.39" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Start Your Free Recipes Journey"
            android:textSize="20dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:gravity="center"/>

        <EditText
        android:id="@+id/rusername"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="left"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:background="@drawable/shape1"
        android:typeface="normal"
        android:textAllCaps="false"

        />

        <EditText
            android:id="@+id/rpwd"
            android:hint="@string/pwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="left"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/shape1"
            android:textAllCaps="false"
            android:typeface="normal"
            />
        <EditText
            android:id="@+id/rcpwd"
            android:hint="@string/confirmpwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="left"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/shape1"
            android:textAllCaps="false"
            android:typeface="normal"

            />

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="left"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/shape1"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/description"
            android:hint="One Sentence Description Of Yourself"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="left"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/shape1"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/rregister"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/shape"
            android:typeface="normal"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:background="@drawable/shape2"
            android:typeface="normal"
            android:textAllCaps="false"
            />
    </LinearLayout>

</RelativeLayout>



















